[project]
name = "pyblisher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dacite>=1.8.1",
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.ruff]
line-length = 80
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
venvPath = "."
venv = ".venv"
