[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyblisher"
version = "0.3.0"
description = "A simple python interface for the VCPublish API by VCS."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "dacite>=1.8.1",
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/rostock/pyblisher"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
default = true

[tool.hatch.build]
sources = ["src"]
package = "pyblisher"

[tool.ruff]
line-length = 80
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
venvPath = "."
venv = ".venv"
