[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyblisher"
version = "0.7.0"
description = "A simple python interface for the VCPublish API by VCS."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["dacite>=1.8.1", "httpx>=0.28.1", "tqdm>=4.67.1"]

[project.urls]
Repository = "https://github.com/rostock/pyblisher"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
default = true

[tool.hatch.build]
sources = ["src"]
package = "pyblisher"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
python_executable = ".venv/bin/python"

[dependency-groups]
dev = ["mypy>=1.16.1", "ruff>=0.11.13", "types-tqdm>=4.67.0.20250516"]
